all alignment fixed appstore and social app logo fixed

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -475,11 +475,13 @@ a:hover {
 	margin-bottom: 5rem;
 }
 
-.header .font {
+.header .image{
+	max-width:100%;
+    height:100px;
 	align-items: center;
 	margin-top: 2rem;
 	margin-right: 30px;
-	color: yellow;
+	
 }
 
 .header h2 {
@@ -580,11 +582,6 @@ a:hover {
 	padding-top: 2.25rem;
 	padding-bottom: 4.75rem;
 	background-color: #f3f3f3;
-	/* background: linear-gradient(rgb(252, 250, 251), rgb(255, 255, 255)); */
-}
-
-.basic-1 .image-container {
-	margin-top: 5rem;
 }
 
 .basic-1 h2 {
@@ -600,50 +597,101 @@ a:hover {
 }
 
 .basic-1 .text-container {
-	margin-top: 15rem;
-	margin-left: 2.75rem;
+	margin-top: 10rem;
+	margin-left: 2.5rem;
 }
 .basic-1 .image-container {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
+
+
+
+
+
+/* Augmented part------------ */
+.augmented .text-container {
+	margin-top: 200px;
+	margin-right: 1rem;
+	margin-left: 5px;
+		margin-bottom: 0;
+}
+
+.augmented .image-container {
+	text-align: right;
+}
+
+
+	
+	.augmented .image-container {
+		margin-top: 50px;
+		margin-bottom: 0;
+	}
+
+
+/* Augmented part------------ */
+
+
+
+
+
+
 
 /*********************/
 /*     Details 2     */
 /*********************/
-.basic-2 {
-	padding-top: 4.5rem;
+.about {
+	padding-top: 7rem;
 	padding-bottom: 9.5rem;
 	background: url('../images/details-2-background.jpg') center center no-repeat;
 	background-size: cover;
 }
 
-.basic-2 .text-container {
+.about .text-container {
+	margin-left: 10px;
 	margin-bottom: 4rem;
 }
 
-.basic-2 .text-container .about-title{
-	font-size: 1.5rem;
+.about .text-container .about-title{
+	text-align: center;
+	font-size: 1.8rem;
 	color: grey;
 }
 
-/* .basic-2 .text-container .about-details{
-	justify-content: flex-start;
-	margin-left: 20px;
-  width: 400px;
-  border: 0.5px solid grey;
-  padding: 10px;
-} */
 
-.basic-2 h2 {
+.about h2 {
 	margin-bottom: 1.75rem;
 }
 
-.basic-2 p {
+.about p {
 	font-size: 1rem;
 	margin-bottom: 2rem;
 	color: black;
 }
 
+.about .text-container {
+		margin-top: 6rem;
+		margin-right: 3rem;
+	}
+
+.about .image-container {
+		text-align: right;
+	}
+	
+.about .text-container {
+			margin-top: 2rem;
+			margin-left: 5px;
+			margin-bottom: 0;
+		}
+.about .text-container .about-details{
+			text-align: justify;
+	  text-justify: inter-word;
+	  font-size: 0.8rem;
+	  margin-bottom: 3rem;
+		}
+.about .image-container {
+			margin-top: 50px;
+			margin-bottom: 0;
+		}
 
 
 
@@ -1228,9 +1276,6 @@ a:hover {
 	margin-bottom: 1rem;
 }
 
-/* .contact h2 {
-	margin-bottom: 1.75rem;
-} */
 
 .contact .list-unstyled .fas {
 	font-size: 0.375rem;
@@ -1245,14 +1290,9 @@ a:hover {
 	margin-right: 20px;
 }
 
-/* Contact */
-.contact .text-container {
-	margin-top: 1.5rem;
-	margin-right: 2.75rem;
-}
 
 .contact form {
-	margin-left: 2.75rem;
+	margin-left: 0.5rem;
 }
 
 .contact h1{
@@ -1318,8 +1358,27 @@ a:hover {
 .footer .fa-stack:hover .fa-stack-2x {
     color: #fdf000;
 }
-
-
+.footer .fa-stack .footer-image{
+	width: 2em;
+	margin-bottom: 1.25rem;
+	margin-right: 0.375rem;
+	font-size: 1.5rem;
+	align-items: center;	
+}
+.footer .fa-stack .footer-image-twitter{
+	width: 3.2rem;
+	margin-bottom: 0.5rem;
+	margin-right: 0.1rem;
+	font-size: 1.5rem;
+	align-items: center;	
+}
+.footer .fa-stack .footer-image-instagram{
+	width: 3.6rem;
+	margin-bottom: 0.4rem;
+	margin-right: 0.375rem;
+	font-size: 1.5rem;
+	align-items: center;	
+}
 /*********************/
 /*     Copyright     */
 /*********************/
@@ -1608,23 +1667,7 @@ a:hover {
 	
 	
 	
-	/* Details 2 */
-	.basic-2 .text-container {
-		margin-top: 2rem;
-		margin-left: 5px;
-		margin-bottom: 0;
-	}
-	.basic-2 .text-container .about-details{
-		text-align: justify;
-  text-justify: inter-word;
-  font-size: 0.8rem;
-  margin-bottom: 3rem;
-	}
-	.basic-2 .image-container {
-		margin-top: 50px;
-		margin-bottom: 0;
-	}
-	/* end of details 2 */
+
 
 
 	/* Testimonials */
@@ -1763,16 +1806,6 @@ a:hover {
 	
 
 
-	/* Details 2 */
-	.basic-2 .text-container {
-		margin-top: 6rem;
-		margin-right: 3rem;
-	}
-
-	.basic-2 .image-container {
-		text-align: right;
-	}
-	/* end of details 2 */
 
 
 	/* Features */
